<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jcala.practica6.com.example.jcala.ej6.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculadora de IMC"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="36sp"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textoAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#7C4DFF"
            android:text="@string/altura" />

        <EditText
            android:id="@+id/editAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="12"
            android:hint="@string/pistaAltura"
            android:textColor="#651FFF"
            android:inputType="textPersonName" />

        <TextView
            android:textColor="#7C4DFF"
            android:id="@+id/textoUnidadesAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/unidadesAltura" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textoPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.64"
            android:textAlignment="center"
            android:textColor="#7C4DFF"
            android:text="@string/peso" />

        <EditText
            android:id="@+id/editPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.01"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#651FFF"
            android:hint="@string/pistaPeso" />

        <TextView
            android:id="@+id/textoUnidadesPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#7C4DFF"
            android:text="@string/unidadesPeso" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calculoIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Boton1"
            android:onClick="calculaIMC"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/resultadoIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultadoIMC"
            android:textAlignment="center"
            android:textColor="#7C4DFF"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultadoIMCTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultadoDefecto"
        android:textSize="35dp"
        android:textColor="#6200EA"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textoSexo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.22"
            android:text="@string/genero"
            android:textAlignment="center"
            android:textColor="#7C4DFF" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:paddingRight="25dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/mujer" />
        </RadioGroup>
    </LinearLayout>


    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:id="@+id/thePicker"
        android:datePickerMode="spinner" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/calculoIGCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CalcularIGCE"
            android:textAlignment="center"
            android:textColor="#7C4DFF" />

        <TextView
            android:id="@+id/resultadoIGCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultadoIGCE"
            android:textAlignment="center"
            android:textColor="#7C4DFF"
            android:textSize="24sp" />
    </LinearLayout>


</LinearLayout>
